Revert "Fix map update on mobile when changing filters"
This reverts commit 74f91a51ad5e90c2c0249a15ce0ec4b1e0fde852.

--- a/styles/map-view.scss
+++ b/styles/map-view.scss
@@ -9,8 +9,7 @@
   width: 100%;
   // Don't display map on list view.
   .has-filter-open & {
-    // We can't hide the map because it breaks the map update.
-    margin-top: -9999px;
+    display: none;
   }
   .is-list-view & {
     display: none;
